exports[`test CheckGroup renders correctly with defaults 1`] = `
<div
  className="container"
  id={undefined}
  onChange={undefined}>
  <div
    className="column">
    <span
      className="wrapper">
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime1"
        name="checkGroup control"
        onChange={[Function]}
        type="checkbox"
        value="ducati" />
      <label
        className="control"
        htmlFor="_teatime1" />
      <label
        className="label"
        htmlFor="_teatime1">
        Ducati
      </label>
    </span>
    <span
      className="wrapper">
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime2"
        name="checkGroup control"
        onChange={[Function]}
        type="checkbox"
        value="honda" />
      <label
        className="control"
        htmlFor="_teatime2" />
      <label
        className="label"
        htmlFor="_teatime2">
        Honda
      </label>
    </span>
    <span
      className="wrapper">
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime3"
        name="checkGroup control"
        onChange={[Function]}
        type="checkbox"
        value="jawa" />
      <label
        className="control"
        htmlFor="_teatime3" />
      <label
        className="label"
        htmlFor="_teatime3">
        Jawa
      </label>
    </span>
  </div>
</div>
`;

exports[`test CheckGroup renders correctly with defined props 1`] = `
<div
  className="container"
  id="checkGroups id"
  onChange={undefined}>
  <div
    className="column">
    <span
      className="wrapper">
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime4"
        name="checkGroup control"
        onChange={[Function]}
        type="checkbox"
        value="ducati" />
      <label
        className="control"
        htmlFor="_teatime4" />
      <label
        className="label"
        htmlFor="_teatime4">
        Ducati
      </label>
    </span>
    <span
      className="wrapper">
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={true}
        id="_teatime5"
        name="checkGroup control"
        onChange={[Function]}
        type="checkbox"
        value="honda" />
      <label
        className="control"
        htmlFor="_teatime5" />
      <label
        className="label"
        htmlFor="_teatime5">
        Honda
      </label>
    </span>
  </div>
  <div
    className="column">
    <span
      className="wrapper">
      <input
        checked={false}
        className="native"
        defaultValue={undefined}
        disabled={undefined}
        id="_teatime6"
        name="checkGroup control"
        onChange={[Function]}
        type="checkbox"
        value="jawa" />
      <label
        className="control"
        htmlFor="_teatime6" />
      <label
        className="label"
        htmlFor="_teatime6">
        Jawa
      </label>
    </span>
  </div>
</div>
`;
